Header hero image: Contrast improvements, curved shape, fixed issues for some mobile devices.

--- a/css/rx.css
+++ b/css/rx.css
@@ -76,7 +76,9 @@ body.deferred {
     position: relative; 
     background: url('../images/stock/sky_3_crop.webp') no-repeat center center;
     background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+    /*clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);*/
+    clip-path: ellipse(150% 100% at 20% 0%);
+
     color: black;
 }
 .hero::before {
@@ -84,7 +86,11 @@ body.deferred {
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: rgba(255, 255, 255, 0.5);  /* adjust opacity to white out image */
+    /*background: rgba(0, 0, 0, 0.25);*/  /* adjust opacity to white out image */
+    /*background: rgba(128, 128, 128, 0.05);*/  /* adjust opacity to white out image */
+    /*(backdrop-filter: brightness(1.2) saturate(0.8) contrast(0.8);)*/
+    backdrop-filter: brightness(1.2) saturate(0.8) contrast(0.8);
+
     z-index: 0;
 }
 
@@ -290,7 +296,7 @@ body.deferred {
     }
 
     .hero {
-      clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+      /*clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);*/
       max-height: 200px;
     }
 
@@ -322,6 +328,7 @@ body.deferred {
     .hero {
       background: url('../images/stock/sky_3_crop_mobile.webp') no-repeat center center;
       max-height: 160px;
+      background-size: cover !important;
     }
 
     .hero-content {
